packages/react-server/examples/basic/src/routes/test/error/boundary/dir/page.tsx
export default function Page() {
  return <div>boundary/dir/page.tsx</div>;
}
